# wend

./: .gitignore  .mailmap  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION.md  PLAN.md  README.md  install.sh  release-please-config.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release-please.yml  release.yml
crates/recall-cli/: Cargo.toml
crates/recall-cli/src/: cli.rs  main.rs  render.rs
crates/recall-core/: Cargo.toml
crates/recall-core/src/: config.rs  error.rs  lib.rs  model.rs
crates/recall-core/src/embed/: mod.rs
crates/recall-core/src/index/: mod.rs
crates/recall-core/src/parser/: mod.rs  routing.rs
crates/recall-core/src/recover/: mod.rs
crates/recall-core/src/search/: mod.rs
crates/recall-core/src/store/: mod.rs  schema.rs
crates/recall-core/src/topology/: mod.rs
crates/recall-core/tests/: index_golden.rs  parser_golden.rs
crates/wend-cli/: Cargo.toml
crates/wend-cli/src/: cli.rs  main.rs  render.rs
crates/wend-core/: Cargo.toml
crates/wend-core/src/: config.rs  error.rs  lib.rs
crates/wend-core/src/embed/: mod.rs
crates/wend-core/src/parser/: content.rs
crates/wend-core/src/search/: mod.rs
crates/wend-core/src/store/: mod.rs  schema.rs
crates/wend-core/tests/: index_golden.rs  parser_golden.rs
fixtures/: basic_session.jsonl
plugin/.claude-plugin/: plugin.json
plugin/commands/: search.md
plugin/hooks/: hooks.json  index-check.sh
plugin/skills/find/: SKILL.md
plugin/skills/profile/: SKILL.md  build_sample.py  mine.mjs
plugin/skills/skill-forge/: SKILL.md  collect_topic.py  forge.mjs
