[workspace]
resolver = "2"
members = ["crates/recall-core", "crates/recall-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ferdinandobons/session-recall"
rust-version = "1.85"

[workspace.dependencies]
recall-core = { path = "crates/recall-core" }
# core
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
rusqlite = { version = "0.37", features = ["bundled"] }
etcetera = "0.10"
rayon = "1"
tracing = "0.1"
# cli
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# dev
tempfile = "3"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
