[package]
name = "recall-cli"
description = "session-recall CLI: find, recover, and visualize your Claude Code session history"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "recall"
path = "src/main.rs"

[features]
default = []
tui = []        # interactive picker (nucleo + ratatui), wired in a later step
semantic = ["recall-core/semantic"] # local embeddings (Candle, opt-in)

[dependencies]
recall-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
