[package]
name = "recall-core"
description = "Core engine for session-recall: parse, index, search, recover, topology over Claude Code transcripts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
