[package]
name = "wend-cli"
description = "wend CLI: find, recover, and visualize your Claude Code session history"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "wend"
path = "src/main.rs"

[features]
default = []
tui = []        # interactive picker (nucleo + ratatui), wired in a later step
semantic = ["wend-core/semantic"] # local embeddings (fastembed/ONNX, opt-in)

[dependencies]
wend-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
