[package]
name = "wend-core"
description = "Core engine for wend: parse, index, search, recover, topology over Claude Code transcripts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rusqlite.workspace = true
etcetera.workspace = true
rayon.workspace = true
tracing.workspace = true

# Optional: local semantic search via fastembed (ONNX Runtime). Opt-in because
# it's heavy (model download, larger binary) and the keyword core needs none of it.
# ort gives ~5-10x the CPU throughput of a pure-Rust path — the speed that makes
# embedding the whole corpus practical.
fastembed = { version = "5", optional = true }

[features]
semantic = ["dep:fastembed"]

[dev-dependencies]
tempfile.workspace = true
